--- a/block/src/social-sharing-block/style.scss
+++ b/block/src/social-sharing-block/style.scss
@@ -4,6 +4,19 @@
 
 .wp-block-wpzoom-blocks-social-sharing {
     position: relative;
+
+
+    &.align-center .social-sharing-icons {
+        justify-content: center;
+    }
+
+    &.align-left .social-sharing-icons  {
+        justify-content: flex-start;
+    }
+
+    &.align-right .social-sharing-icons {
+        justify-content: flex-end;
+    }
     
     .social-sharing-icons {
         display: flex;
@@ -11,18 +24,6 @@
         list-style: none;
         padding: 0;
         margin: 0;
-        
-        &.align-left {
-            justify-content: flex-start;
-        }
-        
-        &.align-center {
-            justify-content: center;
-        }
-        
-        &.align-right {
-            justify-content: flex-end;
-        }
         
         .social-sharing-icon-li {
             display: inline-block;
